# arduino-simulator

./: .gitignore  README.md  build.gradle  settings.gradle
src/main/java/fakeArduino/: App.java  JNIArduino.java  Pin.java
src/main/resources/: CMakeLists.txt
src/main/resources/source/: Arduino.h  arduino.c  fakeArduino_JNIArduino.h
src/test/java/fakeArduino/: AppTest.java  PinGetValueTest.java  PinPinModeTest.java  PinSetValueTest.java
src/test/resources/: getValue.ino  pinMode.ino  setValue.ino  test.ino
